@@ -31,8 +31,8 @@ public class Constants {
         public static  String key;
 
         static {
-                //try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("sizes.txt"))) {
-                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\sizes.txt"))){
+                //try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("sizes.txt"))) {
+                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\sizes.txt"))){
                         String[] s = bufferedReader.readLine().split(" ");
                         kPhotoVertical = Double.parseDouble(s[0]);
                         kPhotoHorizontal = Double.parseDouble(s[1]);
@@ -40,8 +40,8 @@ public class Constants {
                 } catch (IOException e) {
                         e.printStackTrace();
                 }
-                //try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("shifts.txt"))){
-                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\shifts.txt"))){
+                //try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("shifts.txt"))){
+                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\shifts.txt"))){
                         String []s = bufferedReader.readLine().split(" ");
                         shiftHorizontalPhotoHorizontally = Integer.parseInt(s[0]);
                         shiftHorizontalPhotoVertically = Integer.parseInt(s[1]);
@@ -54,8 +54,8 @@ public class Constants {
                 } catch (IOException e) {
                         e.printStackTrace();
                 }
-                //try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("key.txt"))){
-                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\key.txt"))){
+                //try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("key.txt"))){
+                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\key.txt"))){
                         String []s = bufferedReader.readLine().split(" ");
                         key = s[0];
                 } catch (IOException e) {
@@ -79,10 +79,9 @@ public class Constants {
         public static final Path PATH_PHOTO_HORIZONTAL = Path.of("D:\\NoosferaProgram\\pictures\\Photo\\Horizontal");
         public static final Path PATH_TO_SAVED_TERMO = Path.of("D:\\NoosferaProgram\\pictures\\ChangedTermo");
         public static final Path PATH_TO_SAVED_PHOTO = Path.of("D:\\NoosferaProgram\\pictures\\ChangedPhoto");
-        public static final Path PATH_EXCEL_TEMP = Path.of("D:\\NoosferaProgram\\tempFile.xlsx");
-        public static final Path PATH_CREATED_PROTOKOL = Path.of("D:\\NoosferaProgram\\protocol.xlsx");
+        public static final Path PATH_EXCEL_TEMP = Path.of("D:\\NoosferaProgram\\program files\\tempFile.xlsx");
+        public static final Path PATH_CREATED_PROTOKOL = Path.of("D:\\NoosferaProgram\\Готовый отчет.xlsx");
         public static final Path PATH_HEADERS = Path.of("D:\\NoosferaProgram\\Содержание.xlsx");
-        public static final Path PATH_TABLES = Path.of("D:\\NoosferaProgram\\Автоочет.xlsx");
         public static final Path PATH_TABLESPDF = Path.of("D:\\NoosferaProgram\\Новый отчет.pdf");
         public static final Path PATH_TABLESXLSX = Path.of("D:\\NoosferaProgram\\Автоочет.xlsx");
 
@@ -96,9 +95,11 @@ public class Constants {
 //        public static final Path PATH_PHOTO_HORIZONTAL = path.resolve("Pictures").resolve("Photo").resolve("Horizontal");
 //        public static final Path PATH_TO_SAVED_TERMO = path.resolve("Pictures").resolve("ChangedTermo");
 //        public static final Path PATH_TO_SAVED_PHOTO = path.resolve("Pictures").resolve("ChangedPhoto");
-//        public static final Path PATH_EXCEL_TEMP = path.resolve("tempFile.xlsx");
-//        public static final Path PATH_CREATED_PROTOKOL = path.resolve("protocol.xlsx");
+//        public static final Path PATH_EXCEL_TEMP = path.resolve("program files")resolve("tempFile.xlsx");
+//        public static final Path PATH_CREATED_PROTOKOL = path.resolve("Готовый отчет.xlsx");
 //        public static final Path PATH_HEADERS = path.resolve("Содержание.xlsx");
+//        public static final Path PATH_HEADERS = path.resolve("Новый отчет.pdf");
+//        public static final Path PATH_HEADERS = path.resolve("Автоочет.xlsx");
 
 
 
